add component Main.jsx to api.js

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -23,10 +23,12 @@
       font-weight: 400;
       font-size: 25px;
       margin: 0 30px;
+      text-align: center;
       @media screen and (max-width: 500px) {
         font-size: 20px;
         width: 110px;
       }
+
       h1 {
         margin: 0;
       }
