add charactersList-reducer.js and sagas.js

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,7 +1,7 @@
 @import '../../common/styles/sass/variables';
 
 .header {
-  position: absolute;
+  position: fixed;
   display: flex;
   flex-direction: column;
   justify-content: center;
