--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -1,6 +1,8 @@
 .container {
   width: 100%;
-  min-height: 100vh;
+  min-height: 88vh;
   background-color: #252527;
-  text-align: center;
+  padding-top: 120px;
+  display: flex;
+  justify-content: center;
 }
