--- a/src/components/charactersList/Character.module.scss
+++ b/src/components/charactersList/Character.module.scss
@@ -1,17 +1,53 @@
-.container {
-  width: 600px;
-  background-color: #88888a;;
-  display: flex;
-  margin-bottom: 20px;
-  align-items: center;
+@import '../../common/styles/sass/variables';
 
-  .characterPhoto{
-
+.wrapper {
+  width: 500px;
+  background-color: $bgColor;
+  margin-bottom: 30px;
+  :hover{
+    color: #cb0c12;
   }
-  .characterName {
-    margin-left: 20px;
-    h3 {
-      text-decoration: none;
+  @media screen and (max-width: 600px) {
+    width: 220px;
+  }
+
+  a {
+    display: block;
+    text-decoration: none;
+    color: #000000;
+
+    .container {
+      display: flex;
+
+      align-items: center;
+      border-radius: 10px;
+      @media screen and (max-width: 600px) {
+        flex-direction: column
+      }
+
+      .characterPhoto {
+        padding: 10px;
+
+        img {
+          display: block;
+          height: 200px;
+          object-fit: cover;
+          border-radius: 10px;
+        }
+      }
+
+      .characterName {
+        margin: auto;
+        text-align: center;
+
+        h3 {
+          font-family: $fontFamily;
+          font-size: 28px;
+          @media screen and (max-width: 600px) {
+            font-size: 18px;
+          }
+        }
+      }
     }
   }
 }
