--- a/src/components/charactersList/CharactersList.module.scss
+++ b/src/components/charactersList/CharactersList.module.scss
@@ -1,7 +1,16 @@
-.container {
-  width: 800px;
+.wrapper {
+  width: 90%;
 
-  display: flex;
-  flex-direction: column;
-
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-around;
+    @media screen and (max-width: 1250px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
+
