--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: $bdColor;
+  background-color: $headerColor;
 
 
   .container {
@@ -19,13 +19,13 @@
     margin: 10px;
 
     .title {
-      font-family: 'Roboto', sans-serif;
+      font-family: $fontFamily;
       font-weight: 400;
       font-size: 25px;
       margin: 0 30px;
       text-align: center;
-      @media screen and (max-width: 500px) {
-        font-size: 20px;
+      @media screen and (max-width: 600px) {
+        font-size: 18px;
         width: 110px;
       }
 
@@ -36,9 +36,8 @@
   }
 
   .loader {
-
     width: 100%;
-    background-color: $bdColor;
+    background-color: $headerColor;
   }
 }
 
