--- a/src/components/characterPage/CharacterPage.module.scss
+++ b/src/components/characterPage/CharacterPage.module.scss
@@ -1,17 +1,55 @@
+@import '../../common/styles/sass/variables';
+
 .container {
-  width: 600px;
-  background-color: #88888a;;
-  display: flex;
-  margin-bottom: 20px;
-  align-items: center;
 
-  .characterPhoto{
+  width: 700px;
 
+  background-color: $bgColor;
+  border-radius: 10px;
+  position: relative;
+
+  .characterPhoto {
+    margin: 10px 30px 10px 10px;
+    float: left;
   }
-  .characterName {
-    margin-left: 20px;
-    h3 {
-      text-decoration: none;
+
+  .characterDescription {
+    font-family: $fontFamily;
+    color: #ffffff;
+
+    .characterName {
+      margin-left: 20px;
+
+      h3 {
+        text-decoration: none;
+        font-size: 30px
+      }
+    }
+
+    .characterStatus {
+      font-size: $fontSizeForDescription;
+
+      .characterStatusDead {
+        color: #ff4500;
+      }
+
+      .characterStatusAlive {
+        color: #05bf05;
+      }
+    }
+
+    .description {
+      margin: 30px;
+      display: flex;
+      flex-direction: column;
+
+      .sectionTitle {
+        color: $bgSecondColor;
+      }
+
+      .descriptionName {
+        font-size: $fontSizeForDescription
+      }
     }
   }
 }
