--- a/src/components/characterPage/CharacterPage.module.scss
+++ b/src/components/characterPage/CharacterPage.module.scss
@@ -6,50 +6,97 @@
 
   background-color: $bgColor;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  @media screen and (max-width: 700px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 250px;
+    padding: 10px 10px 30px;
+    box-sizing: border-box;
 
+  }
 
   .characterPhoto {
     margin: 10px 30px 10px 10px;
-    float: left;
+    @media screen and (max-width: 700px) {
+      margin: 0;
+    }
+
+    img {
+      @media screen and (max-width: 700px) {
+        height: 230px;
+        object-fit: cover;
+        margin-top: 10px;
+      }
+    }
   }
 
   .characterDescription {
     font-family: $fontFamily;
     color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    .characterName {
-      margin-left: 20px;
+    .descriptionBlock {
 
-      h3 {
-        text-decoration: none;
-        font-size: 30px
+      min-height: 250px;
+
+      .characterName {
+        margin-bottom: 20px;
+
+        h3 {
+          text-decoration: none;
+          font-size: 30px;
+          margin: 0;
+        }
+      }
+
+      .characterStatus {
+        margin-bottom: 20px;
+        font-size: $fontSizeForDescription;
+
+        .characterStatusDead {
+          color: #ff4500;
+        }
+
+        .characterStatusAlive {
+          color: #05bf05;
+        }
+      }
+
+      .description {
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+
+        .sectionTitle {
+          color: $bgSecondColor;
+        }
+
+        .descriptionName {
+          font-size: $fontSizeForDescription
+        }
       }
     }
+  }
 
-    .characterStatus {
-      font-size: $fontSizeForDescription;
+  a {
+    text-decoration: none;
+    color: black;
+    font-size: $fontSizeForDescription;
 
-      .characterStatusDead {
-        color: #ff4500;
-      }
-
-      .characterStatusAlive {
-        color: #05bf05;
-      }
-    }
-
-    .description {
-      margin: 30px;
+    .backButton {
+      background-color: #fc9e04;
+      height: 50px;
+      width: 100px;
       display: flex;
-      flex-direction: column;
-
-      .sectionTitle {
-        color: $bgSecondColor;
-      }
-
-      .descriptionName {
-        font-size: $fontSizeForDescription
-      }
+      align-items: center;
+      justify-content: center;
+      border-radius: 10px;
     }
   }
 }
